create swiper with mogodb data and 6 recent data load

--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,10 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
+
+a.active {
+  text-decoration: underline;
+}
+a.pending {
+  text-decoration: none;
+}
