--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
 @import "tailwindcss";
 @plugin "daisyui";
 
 
+.lora{
+  font-family: "Lora", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+.primary-color{
+  background: #FF5A0A;
+  color: #000;
+}
+.primary-color:hover{
+  background: #fd8346;
+  color: #000;
+}
 a.active {
   text-decoration: underline;
 }
